# Identity

./: CMakeLists.txt  LICENSE.txt  README.md  makePhylipMatrix.py
py/: README.txt  makeTree.py
src/: Aligner.cpp  Aligner.h  AlignerParallel.cpp  AlignerParallel.h  BestFirst.cpp  BestFirst.h  DataGenerator.cpp  DataGenerator.h  Evaluator.cpp  Evaluator.h  FastaReader.cpp  FastaReader.h  Feature.cpp  Feature.h  FeatureExpander.cpp  FeatureExpander.h  FeaturePaired.cpp  FeaturePaired.h  FeatureSquared.cpp  FeatureSquared.h  GLM.cpp  GLM.h  GLMClassifier.cpp  GLMClassifier.h  GLMPredictor.cpp  GLMPredictor.h  GLMRegressor.cpp  GLMRegressor.h  ITransformer.cpp  ITransformer.h  Identity.cpp  IdentityCalculator.cpp  IdentityCalculator.h  IdentityCalculator1.cpp  IdentityCalculator1.h  KmerHistogram.cpp  KmerHistogram.h  LockFreeQueue.cpp  LockFreeQueue.h  Matrix.cpp  (+22 more)
src/meshclust/: Cluster.cpp  Cluster.h  ClusterEvaluator.cpp  ClusterEvaluator.h  ClusterInfo.cpp  ClusterInfo.h  ClusteringUtil.h  MeShClust.cpp  MeanShift.cpp  MeanShift.h  MeanShiftLarge.cpp  MeanShiftLarge.h  Reservoir.cpp  Reservoir.h
test/: keratin_query.fasta
